# flask_auth_app

./: .gitignore  README.md  babel.cfg  pyproject.toml  requirements.txt  tox.ini
gflask/: __init__.py  auth.py  main.py  models.py  utils.py
gflask/templates/: base.html  login.html  profile.html  reset.html  user_menu.html  verify.html
gflask/templates/gflask/: base.html  forgot.html  index.html  login.html  profile.html  reset.html  settings.html  signup.html  verify.html
gflask/translations/en/LC_MESSAGES/: messages.po
project/: __init__.py  auth.py  database.py  mail.py  models.py  validate.py
project/templates/: base.html  forgot.html  index.html  login.html  messages.html  profile.html  reset.html  settings.html  signup.html  user_menu.html  verify.html
project/translations/en/LC_MESSAGES/: messages.po
tests/: conftest.py  test_auth.py  test_models.py
