
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gflask"
version = "0.1.0"
description = "Libreria di autenticazione e utility per Flask"
authors = [
    {name = "Gianfranco Messori", email = "gmessori@gmail.com"},
]
dependencies = [
    "Flask>=3.1.3",
    "python-dotenv==0.9.9",
    "flask-babel==4.0.0",
    "Flask-Login==0.6.3",
    "SQLAlchemy==2.0.48",
    "yagmail==0.15.293",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-flask",
    "ruff",
]

[tool.flit.module]
name = "gflask"

[tool.ruff]
# Configurazione generale di Ruff
line-length = 88

[tool.ruff.lint]
# "I" abilita isort (ordinamento import)
select = ["I", "E", "F"] 

[tool.ruff.lint.isort]
# Forza gli import su singola riga come richiesto
force-single-line = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]